Implement user soft delete and update tests, Docker, and Jenkins config