@@ -1,10 +1,13 @@
 package com.kexun.user.service;
 
+import com.kexun.user.client.LoanClient;
 import com.kexun.user.dto.UserUpdateRequest;
+import com.kexun.user.exception.ConflictException;
 import com.kexun.user.exception.ResourceNotFoundException;
 import com.kexun.user.model.User;
 import com.kexun.user.repository.UserRepository;
 import com.kexun.user.service.impl.UserServiceImpl;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.springframework.data.domain.Page;
@@ -17,14 +20,24 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 public class UserServiceTest {
+
+    private UserRepository userRepository;
+    private LoanClient loanClient;
+    private UserService userService;
+
+    @BeforeEach
+    void setUp() {
+        userRepository = mock(UserRepository.class);
+        loanClient = mock(LoanClient.class);
+        userService = new UserServiceImpl(userRepository, loanClient);
+    }
+
     @Test
     void create_shouldSaveUser_whenUserProvided() {
-        UserRepository userRepository = mock(UserRepository.class);
-
-        UserService userService = new UserServiceImpl(userRepository);
 
         User user = new User();
         when(userRepository.save(user))
@@ -37,28 +50,22 @@ public class UserServiceTest {
     }
 
     @Test
-    void getById_shouldReturnUser_whenUserExists() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
-
+    void getById_shouldReturnUser_whenUserExistsAndIsNotDeleted() {
         User user = new User();
         user.setId(1L);
 
-        when(userRepository.findById(1L))
+        when(userRepository.findByIdAndDeletedFalse(1L))
                 .thenReturn(Optional.of(user));
 
         User result = userService.getById(1L);
-        assertEquals(user, result);
 
-        verify(userRepository).findById(1L);
+        assertEquals(user, result);
+        verify(userRepository).findByIdAndDeletedFalse(1L);
     }
 
     @Test
-    void getById_shouldThrowException_whenUserNotFound() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
-
-        when(userRepository.findById(1L))
+    void getById_shouldThrowException_whenUserNotFoundOrDeleted() {
+        when(userRepository.findByIdAndDeletedFalse(1L))
                 .thenReturn(Optional.empty());
 
         ResourceNotFoundException ex = assertThrows(
@@ -67,14 +74,11 @@ public class UserServiceTest {
         );
 
         assertEquals("User 1 not found", ex.getMessage());
-        verify(userRepository).findById(1L);
+        verify(userRepository).findByIdAndDeletedFalse(1L);
     }
 
     @Test
-    void list_shouldReturnAllUsers_whenSearchIsNull() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
-
+    void list_shouldReturnNonDeletedUsers_whenSearchIsNull() {
         User user1 = new User();
         user1.setId(1L);
 
@@ -85,21 +89,18 @@ public class UserServiceTest {
         Page<User> userPage = new PageImpl<>(users);
 
         Pageable pageable = PageRequest.of(0, 5);
-        when(userRepository.findAll(pageable))
+
+        when(userRepository.findByDeletedFalse(pageable))
                 .thenReturn(userPage);
 
         Page<User> result = userService.list(null, 0, 5);
 
-        assertEquals(users, result.getContent());  // what we test is not the address, but the data
-        // in case of the service code written as "return new PageImpl<>(page.getContent(), pageable, page.getTotalElements());"
-        verify(userRepository).findAll(pageable);
+        assertEquals(users, result.getContent());
+        verify(userRepository).findByDeletedFalse(pageable);
     }
 
     @Test
-    void list_shouldReturnAllUsers_whenSearchIsBlank() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
-
+    void list_shouldReturnNonDeletedUsers_whenSearchIsBlank() {
         User user1 = new User();
         user1.setId(1L);
 
@@ -108,37 +109,31 @@ public class UserServiceTest {
 
         List<User> users = Arrays.asList(user1, user2);
         Page<User> userPage = new PageImpl<>(users);
-        Pageable pageable = PageRequest.of(0, 5);
 
-        when(userRepository.findAll(pageable))
+        Pageable pageable = PageRequest.of(0, 5);
+        when(userRepository.findByDeletedFalse(pageable))
                 .thenReturn(userPage);
 
         Page<User> result = userService.list(" ", 0, 5);
 
-        assertEquals(userPage.getContent(), result.getContent());  // what we test is not the address, but the data
+        assertEquals(users, result.getContent());  // what we test is not the address, but the data
         // in case of the service code written as "return new PageImpl<>(page.getContent(), pageable, page.getTotalElements());"
-        verify(userRepository).findAll(pageable);
+        verify(userRepository).findByDeletedFalse(pageable);
     }
 
     @Test
-    void list_shouldSearchUsers_whenSearchKeywordProvided() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
-
+    void list_shouldSearchNonDeletedUsers_whenSearchKeywordProvided() {
         String keyword = "Peter";
 
         User user1 = new User();
         user1.setId(1L);
         user1.setName("Peter");
 
-        // User user2 = new User();
-        // user2.setId(2L);
-        List<User> users = Arrays.asList(user1);
+        List<User> users = List.of(user1);
         Page<User> userPage = new PageImpl<>(users);
-        Pageable pageable = PageRequest.of(0, 5);
 
         when(userRepository.
-                findByNameContainingIgnoreCaseOrEmailContainingIgnoreCase(
+                findByDeletedFalseAndNameContainingIgnoreCaseOrDeletedFalseAndEmailContainingIgnoreCase(
                         eq(keyword),
                         eq(keyword),
                         any(Pageable.class)
@@ -149,7 +144,7 @@ public class UserServiceTest {
 
         assertEquals(users, result.getContent());
 
-        verify(userRepository).findByNameContainingIgnoreCaseOrEmailContainingIgnoreCase(
+        verify(userRepository).findByDeletedFalseAndNameContainingIgnoreCaseOrDeletedFalseAndEmailContainingIgnoreCase(
                 eq(keyword),
                 eq(keyword),
                 any(Pageable.class)
@@ -158,18 +153,15 @@ public class UserServiceTest {
 
     @Test
     void list_shouldUseCorrectPaginationParameters() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
-
         Page<User> emptyPage = new PageImpl<>(List.of());
 
-        when(userRepository.findAll(any(Pageable.class)))
+        when(userRepository.findByDeletedFalse(any(Pageable.class)))
                 .thenReturn(emptyPage);
 
         userService.list(null, 0, 5);
 
         ArgumentCaptor<Pageable> pageableCaptor = ArgumentCaptor.forClass(Pageable.class);
-        verify(userRepository).findAll(pageableCaptor.capture());
+        verify(userRepository).findByDeletedFalse(pageableCaptor.capture());
 
         Pageable capturedPageable = pageableCaptor.getValue();
 
@@ -178,14 +170,12 @@ public class UserServiceTest {
     }
 
     @Test
-    void update_shouldUpdateUserName_whenUserExists() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
+    void update_shouldUpdateUserName_whenUserExistsAndIsNotDeleted() {
         User user = new User();
         user.setId(1L);
         user.setName("Peter");
 
-        when(userRepository.findById(1L))
+        when(userRepository.findByIdAndDeletedFalse(1L))
                 .thenReturn(Optional.of(user));
 
         UserUpdateRequest request = new UserUpdateRequest();
@@ -194,45 +184,39 @@ public class UserServiceTest {
         when(userRepository.save(any(User.class)))
                 .thenAnswer(invocation -> invocation.getArgument(0));
 
-        // when(userRepository.save(user))
-        //        .thenReturn(user);
-
         User result = userService.update(1L, request);
 
         assertEquals("Jack", result.getName());
 
-        verify(userRepository).findById(1L);
+        verify(userRepository).findByIdAndDeletedFalse(1L);
         verify(userRepository).save(user);
     }
 
     @Test
-    void update_shouldThrowException_whenUserNotFound() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
-
-        when(userRepository.findById(1L))
+    void update_shouldThrowException_whenUserNotFoundOrDeleted() {
+        when(userRepository.findByIdAndDeletedFalse(1L))
                 .thenReturn(Optional.empty());
+
+        UserUpdateRequest request = new UserUpdateRequest();
+        request.setName("Clark");
 
         ResourceNotFoundException ex = assertThrows(
                 ResourceNotFoundException.class,
-                () -> userService.update(1L, new UserUpdateRequest())
+                () -> userService.update(1L, request)
         );
 
         assertEquals("User 1 not found", ex.getMessage());
-        verify(userRepository).findById(1L);
+        verify(userRepository).findByIdAndDeletedFalse(1L);
         verify(userRepository, never()).save(any(User.class));
     }
 
     @Test
-    void update_shouldCallRepositorySave_whenUserExists() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
-
+    void update_shouldCallRepositorySave_whenUserExistsAndIsNotDeleted() {
         User user = new User();
         user.setId(1L);
         user.setName("Peter");
 
-        when(userRepository.findById(1L))
+        when(userRepository.findByIdAndDeletedFalse(1L))
                 .thenReturn(Optional.of(user));
 
         UserUpdateRequest request = new UserUpdateRequest();
@@ -247,11 +231,9 @@ public class UserServiceTest {
     }
 
     @Test
-    void delete_shouldThrowException_whenUserNotFound() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
-        when(userRepository.existsById(1L))
-                .thenReturn(false);
+    void delete_shouldThrowException_whenUserNotFoundOrDeleted() {
+        when(userRepository.findByIdAndDeletedFalse(1L))
+                .thenReturn(Optional.empty());
 
         ResourceNotFoundException ex = assertThrows(
                 ResourceNotFoundException.class,
@@ -259,19 +241,61 @@ public class UserServiceTest {
         );
 
         assertEquals("User 1 not found", ex.getMessage());
-        verify(userRepository).existsById(1L);
+
+        verify(userRepository).findByIdAndDeletedFalse(1L);
+        verifyNoInteractions(loanClient);
+        verify(userRepository, never()).save(any(User.class));
         verify(userRepository, never()).deleteById(anyLong());
     }
 
     @Test
-    void delete_shouldCallRepositoryDeleteById_whenUserExists() {
-        UserRepository userRepository = mock(UserRepository.class);
-        UserService userService = new UserServiceImpl(userRepository);
+    void delete_shouldThrowConflictException_whenUserHasActiveLoans() {
+        User user = new User();
+        user.setId(1L);
+        user.setDeleted(false);
 
-        when(userRepository.existsById(1L))
+        when(userRepository.findByIdAndDeletedFalse(1L))
+                .thenReturn(Optional.of(user));
+
+        when(loanClient.hasActiveLoans(1L))
                 .thenReturn(true);
+
+        ConflictException ex = assertThrows(
+                ConflictException.class,
+                () -> userService.delete(1L)
+        );
+
+        assertEquals("User 1 has active loans and cannot be deleted", ex.getMessage());
+        assertFalse(user.isDeleted());
+
+        verify(userRepository).findByIdAndDeletedFalse(1L);
+        verify(loanClient).hasActiveLoans(1L);
+        verify(userRepository, never()).save(any(User.class));
+        verify(userRepository, never()).deleteById(anyLong());
+    }
+
+    @Test
+    void deleted_shouldSoftDeleteUser_whenUserExistsAndHasNotActiveLoans() {
+        User user = new User();
+        user.setId(1L);
+        user.setDeleted(true);
+
+        when(userRepository.findByIdAndDeletedFalse(1L))
+                .thenReturn(Optional.of(user));
+
+        when(loanClient.hasActiveLoans(1L))
+                .thenReturn(false);
+
+        when(userRepository.save(any(User.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0));
+
         userService.delete(1L);
-        verify(userRepository).existsById(1L);
-        verify(userRepository).deleteById(1L);
+
+        assertTrue(user.isDeleted());
+
+        verify(userRepository).findByIdAndDeletedFalse(1L);
+        verify(loanClient).hasActiveLoans(1L);
+        verify(userRepository).save(user);
+        verify(userRepository, never()).deleteById(anyLong());
     }
 }
